[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mrilite"
version = "0.1.0"
description = "A lightweight toolkit for loading, preprocessing, and visualizing 3D MRI volumes."
readme = "README.md"
requires-python = ">=3.9"

authors = [
    { name = "Luu Minh Sao Khue" }
]

license = { file = "LICENSE" }

dependencies = [
    "numpy",
    "nibabel",
    "matplotlib"
]

[project.urls]
Homepage = "https://github.com/luumsk/mrilite"