[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "mrilite"
version = "0.1.2"
description = "A lightweight toolkit for loading, preprocessing, visualizing, and analysing 3D MRI volumes."
readme = "README.md"
requires-python = ">=3.9"

authors = [
    { name = "Luu Minh Sao Khue" }
]

license = { file = "LICENSE" }

dependencies = [
    "numpy",
    "nibabel",
    "matplotlib",
    "scipy"
]


keywords = ["mri", "medical imaging", "nifti", "visualization", "medical ai"]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Medical Science Apps."
]


[project.urls]
Homepage = "https://github.com/luumsk/mrilite"
Repository = "https://github.com/luumsk/mrilite"
Issues = "https://github.com/luumsk/mrilite/issues"


# ------------------------------
# Setuptools Package Discovery
# ------------------------------
[tool.setuptools.packages.find]
where = ["."]
include = ["mrilite*"]